# yumi-agent

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  COMMERCIAL.md  CONTRIBUTING.md  Dockerfile  Kumi.sln  MANIFEST.in  NOTICE  README.md  SECURITY.md  Yumi.sln  docker-compose.yml  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CONFIGURATION.md  DEPLOYMENT.md  EDGE_TOOLS.md  GETTING_STARTED.md  HTTP_API.md  MEMORY.md  MIGRATION_PLATFORM_FEATURES.md  PROMPT_ARCHITECTURE.md  TESTING.md  TOOL_REGISTRATION.md  UPGRADING_TO_ENTERPRISE.md  WEB_SEARCH.md
kumi/: __init__.py  chat.py  logging_config.py
kumi/cli/: __init__.py  commands.py  registry.py  terminal_chat.py
kumi/core/: assets_check.py  audit.py  auth.py  chatbot.py  connection.py  env_load.py  exceptions.py  http_config.py  tool.py  tool_call_normalize.py  tool_routing.py  tool_trace.py
kumi/core/api/: __init__.py  __main__.py  app_factory.py  chat.py  chat_context.py  chat_debug_trace.py  dependencies.py  docs_middleware.py  edge.py  events.py  http_errors.py  http_helpers.py  line_webhook.py  peers.py  schemas.py  state.py  stream_consumer.py  task_logging.py  timers.py  uploads.py
kumi/core/config/: __init__.py  connection.py  credentials.py  lan.py  legacy.py  line.py  setup_wizard.py  store.py  telegram.py
kumi/core/dispatch/: __init__.py  confirmation.py  dispatcher.py  edge.py  local.py  normalizer.py  trace_sink.py  usage.py
kumi/core/memories/: __init__.py  backend.py  constants.py  context.py  embedding_runner.py  embedding_state.py  memory.py  prune.py  retrieval.py  sessions.py  tool_replay.py  transcript.py  writer.py
kumi/core/multimodal/: __init__.py
kumi/core/platform/: env_load.py  exceptions.py
kumi/core/plugins/: __init__.py  identity.py  ports.py  registry.py  single_user.py
kumi/core/proactive/: __init__.py  interaction.py  planner.py  profiles.py  prompt.py  service.py  state.py  timezone_utils.py  tools.py
kumi/core/prompts/: __init__.py  composer.py  http_bridge.py  store.py
kumi/core/providers/: __init__.py  claude_provider.py  diagnostics.py  gemini_provider.py  ollama_provider.py  openai_provider.py
kumi/core/runtime/: __init__.py  bootstrap.py  edge_naming.py  state.py  timer_registry.py  tool_catalog.py
kumi/core/services/: __init__.py  chat_turn.py
kumi/core/streaming/: __init__.py
kumi/core/stt/: __init__.py  base.py  factory.py  whisper_provider.py
kumi/demo/: __init__.py  launcher.py
kumi/demo/planner/: __init__.py  __main__.py  app.py  bootstrap.py
kumi/demo/smart_home/: __init__.py  __main__.py  app.py  bootstrap.py
kumi/edge/: client.py
kumi/edge/template/: env.template  gitignore.template
kumi/line/: __init__.py  bridge.py  client.py  flex_builders.py  handlers.py  notify.py  server.py
kumi/sdk/: AGENTS.md  README.md  __init__.py
kumi/sdk/cpp/: CMakeLists.txt
kumi/sdk/cpp/include/kumi/: kumi_agent.h  kumi_agent.hpp  tool_arguments.hpp  tool_parameter.hpp
kumi/sdk/cpp/src/: c_api.cpp
kumi/sdk/csharp/: Auth.cs  Connection.cs  EnvParser.cs  KumiAgent.cs  KumiSDK.csproj  RegisterOptions.cs  SchemaBuilder.cs  ToolArguments.cs  ToolHandler.cs  ToolParameter.cs
kumi/sdk/rust/: Cargo.toml
kumi/sdk/rust/src/: agent.rs  auth.rs  connection.rs  lib.rs  types.rs
kumi/telegram/: __init__.py  bot.py  bridge.py  notify.py
kumi/tools/: bootstrap.py  file_tools.py  timer_tools.py  web_tools.py
kumi/ui/: rxconfig.py
kumi/voice/: __init__.py  audio_source.py  dispatch.py  runtime.py  segmenter.py  wake.py
mirai/cli/: __init__.py  commands.py
mirai/core/: chatbot.py  tool.py
mirai/line/: handlers.py  server.py
mirai/tools/: bootstrap.py  file_tools.py
mirai/voice/: runtime.py
tests/: conftest.py  test_api_factory.py  test_api_schemas.py  test_architecture_boundaries.py  test_bridge_scope.py  test_bridge_voice_reply.py  test_chat_api.py  test_chat_debug_api.py  test_chat_debug_trace.py  test_chat_router_quota.py  test_chat_turn_service.py  test_claude_provider.py  test_cli_commands.py  test_cli_environment.py  test_config_cleanup.py  test_config_env_overrides.py  test_config_model.py  test_config_model_api.py  test_debug_observability.py  test_discord_bot.py  test_discord_notify.py  test_dispatch_confirmation.py  test_dispatch_dispatcher.py  test_dispatch_normalizer.py  test_dispatch_usage.py  test_edge_caller_identity.py  test_edge_tool_validation_consistency.py  test_edge_websocket.py  test_edge_workspace.py  test_embedding_runner.py  test_feature_install.py  test_gemini_edge_tool_names.py  test_gemini_tool_sequence_sanitize.py  test_health_endpoint.py  test_http_config.py  test_l1_content_boundaries.py  test_line_client_helpers.py  test_line_flex_builders.py  test_line_postback_confirm.py  test_line_signature.py  (+47 more)
tests/compat/: test_single_user_unchanged.py
tests/voice/: test_cli_validation.py  test_cross_channel_context.py  test_runtime.py
tools/: check_versions.py
tools/benchmarks/: run_benchmarks.py
yumi/: __init__.py  chat.py  logging_config.py
yumi/cli/: __init__.py  commands.py  registry.py  runners.py  terminal_chat.py
yumi/core/: assets_check.py  chatbot.py
yumi/demo/: __init__.py  launcher.py
yumi/discord/: __init__.py  bot.py  bridge.py  notify.py
yumi/edge/: client.py
yumi/line/: __init__.py  bridge.py  flex_builders.py  handlers.py  notify.py  pending.py  server.py
yumi/sdk/: AGENTS.md  README.md  __init__.py
yumi/sdk/cpp/: CMakeLists.txt
yumi/sdk/cpp/include/yumi/: tool_arguments.hpp  tool_parameter.hpp  yumi_agent.h  yumi_agent.hpp
yumi/sdk/cpp/src/: c_api.cpp
yumi/telegram/: __init__.py  bot.py  bridge.py  notify.py
yumi/tools/: bootstrap.py  edge_discovery_tools.py  file_tools.py  search_providers.py  user_context_tools.py  web_tools.py
yumi/ui/: .gitignore  requirements.txt  rxconfig.py
yumi/voice/: __init__.py  audio_source.py  dispatch.py  runtime.py  segmenter.py  wake.py
(+674 files in other folders)
