[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yumi-agent"
version = "0.3.0"
description = "Yumi — open-source self-hosted AI agent framework: cross-language tool edges + Telegram/LINE/Discord chat"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yumi contributors" }]
keywords = ["ai", "agent", "llm", "fastapi", "ollama", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "ollama>=0.4",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "lancedb>=0.4",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "requests>=2.28",
    "json-repair>=0.30",
    "httpx>=0.27",
    "tqdm>=4.66",
    # LLM provider SDKs — small pure-Python clients, bundled so every provider
    # works straight after `pip install yumi-agent`. openai also drives DeepSeek
    # (an OpenAI-compatible endpoint).
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.39",
    # Messaging bridges (LINE needs no extra SDK — it uses the core httpx client).
    "python-telegram-bot>=21.0",
    "discord.py>=2.0",
    # Document ingestion (PDF / docx).
    "PyPDF2>=3.0",
    "python-docx>=1.0",
]

[tool.setuptools.packages.find]
include = ["yumi*"]
exclude = ["_enterprise_seed*"]

[tool.setuptools.package-data]
yumi = [
    "edge/template/**/*",
    "edge/template/*",
    "sdk/AGENTS.md",
    "sdk/README.md",
    "sdk/cpp/CMakeLists.txt",
    "sdk/cpp/include/**/*",
    "sdk/cpp/src/**/*",
    "sdk/csharp/*",
    "sdk/dart/pubspec.yaml",
    "sdk/dart/pubspec.lock",
    "sdk/dart/lib/**/*",
    "sdk/dart/test/**/*",
    "sdk/go/*",
    "sdk/java/pom.xml",
    "sdk/java/src/**/*",
    "sdk/kotlin/build.gradle.kts",
    "sdk/kotlin/settings.gradle.kts",
    "sdk/kotlin/src/**/*",
    "sdk/rust/Cargo.toml",
    "sdk/rust/src/**/*",
    "sdk/swift/Package.swift",
    "sdk/swift/Sources/**/*",
    "sdk/typescript/package.json",
    "sdk/typescript/package-lock.json",
    "sdk/typescript/tsconfig.json",
    "sdk/typescript/src/**/*",
    "sdk/ue5/**/*",
]

[tool.setuptools.exclude-package-data]
yumi = [
    "**/__pycache__/*",
    "**/*.py[cod]",
    "**/.DS_Store",
    "sdk/**/node_modules/**/*",
    "sdk/**/dist/**/*",
    "sdk/**/build/**/*",
    "sdk/swift/.build/**/*",
    "sdk/swift/.swiftpm/**/*",
    "sdk/java/target/**/*",
    "sdk/csharp/bin/**/*",
    "sdk/csharp/obj/**/*",
    "ui/.web/**/*",
    "ui/.states/**/*",
]

[project.scripts]
yumi = "yumi.cli:main"

[project.urls]
Homepage = "https://github.com/wenxijiao/yumi-agent"
Repository = "https://github.com/wenxijiao/yumi-agent"
Documentation = "https://github.com/wenxijiao/yumi-agent/tree/main/docs"
Issues = "https://github.com/wenxijiao/yumi-agent/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pyright>=1.1",
    "twine>=6.0",
]
# Heavy / system-dependent / cloud features kept OUT of the base install.
# `yumi --setup` offers to install these on demand when you turn the feature on;
# or install manually:
#   pip install yumi-agent[embed]  # lightweight local multilingual embeddings
#   pip install yumi-agent[ui]     # Reflex web UI (large; pulls a Node toolchain)
#   pip install yumi-agent[stt]    # speech-to-text (downloads Whisper models)
#   pip install yumi-agent[voice]  # mic wake-word (needs PortAudio + a Picovoice key)
#   pip install yumi-agent[tts]       # Qwen3-TTS spoken replies via the DashScope API
#   pip install yumi-agent[tts-local] # Qwen3-TTS run locally (heavy; needs a CUDA GPU)
#   pip install yumi-agent[all]       # all of the above
embed = ["fastembed>=0.6"]
ui = ["reflex>=0.9"]
stt = ["faster-whisper>=1.0", "huggingface-hub>=0.20"]
voice = ["sounddevice>=0.4.6", "webrtcvad-wheels>=2.0.14", "pvporcupine>=3.0.0"]
tts = ["dashscope>=1.20.0"]
tts-local = ["qwen-tts"]
all = [
    "fastembed>=0.6",
    "reflex>=0.9",
    "faster-whisper>=1.0",
    "huggingface-hub>=0.20",
    "sounddevice>=0.4.6",
    "webrtcvad-wheels>=2.0.14",
    "pvporcupine>=3.0.0",
    "dashscope>=1.20.0",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["yumi", "tests"]
exclude = ["_enterprise_seed"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E721", "E402", "E702"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Many optional / generated imports (templates, SDK shims) are not resolvable as a flat tree.
reportMissingImports = "none"
reportMissingTypeStubs = false
# LanceDB and provider wrappers are untyped; keep CI signal on syntax/unbound names without noise.
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportAssignmentType = "none"
reportReturnType = "none"
reportOptionalSubscript = "none"
reportMissingModuleSource = "none"
# Reflex UI is highly dynamic; static typing for yumi/ui is not enforced in CI.
# Edge templates ship multi-language scaffolds; analysis targets the runtime packages only.
exclude = [
    "_enterprise_seed",
    "build",
    "dist",
    "*.egg-info",
    "yumi/ui",
    "yumi/edge/template",
    "**/__pycache__",
    ".venv",
    "venv",
]

# Slightly tighter diagnostics for the most critical subsystems (incremental
# typing). Optional-access bugs are the most common runtime trap here, so we
# re-enable them as warnings without flipping the whole tree to strict.
[[tool.pyright.executionEnvironments]]
root = "yumi/core/features/memory"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[[tool.pyright.executionEnvironments]]
root = "yumi/core/platform/dispatch"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[[tool.pyright.executionEnvironments]]
root = "yumi/core/features/chat"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
