[build-system]
requires = ["setuptools>=77.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yumi-agent"
version = "0.0.1"
description = "Yumi — open-source self-hosted AI agent framework: cross-language tool edges + Telegram/LINE/Discord chat"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Yumi contributors" }]
keywords = ["ai", "agent", "llm", "fastapi", "ollama", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "ollama>=0.4",
    "fastapi>=0.100",
    # Imported directly across the codebase (not just via fastapi), so pin explicitly.
    "pydantic>=2.0",
    "uvicorn>=0.20",
    "lancedb>=0.4",
    "python-dotenv>=1.0",
    "websockets>=12.0",
    "requests>=2.28",
    "json-repair>=0.30",
    "httpx>=0.27",
    "tqdm>=4.66",
    "rich>=13.7",
    # LLM provider SDKs — small pure-Python clients, bundled so every provider
    # works straight after `pip install yumi-agent`. openai also drives DeepSeek
    # (an OpenAI-compatible endpoint).
    "openai>=1.0",
    "google-genai>=1.0",
    "anthropic>=0.39",
    # Messaging bridges (LINE needs no extra SDK — it uses the core httpx client).
    "python-telegram-bot>=21.0",
    "discord.py>=2.0",
    # Document ingestion (PDF / docx).
    "pypdf>=4.0",
    "python-docx>=1.0",
    # Core local features: these install code only. Model weights and local
    # embedding assets are still downloaded lazily/setup-time, not bundled.
    "fastembed>=0.6",
    "faster-whisper>=1.0",
    # PyAV decodes/transcodes audio (e.g. browser webm/mp4 for cloud STT). Bundles
    # ffmpeg libs in its wheels — no system ffmpeg needed. Pinned explicitly though
    # faster-whisper also pulls it in.
    "av>=11.0",
    "huggingface-hub>=0.20",
    "sounddevice>=0.4.6",
    "webrtcvad-wheels>=2.0.14",
    "pvporcupine>=3.0.0",
    "dashscope>=1.20.0",
]

[tool.setuptools.packages.find]
include = ["yumi*"]
exclude = ["_enterprise_seed*"]

[tool.setuptools.package-data]
yumi = [
    "ui/static/**/*",
    "edge/template/**/*",
    "edge/template/*",
    "sdk/AGENTS.md",
    "sdk/README.md",
    "sdk/cpp/CMakeLists.txt",
    "sdk/cpp/include/**/*",
    "sdk/cpp/src/**/*",
    "sdk/csharp/*",
    "sdk/dart/pubspec.yaml",
    "sdk/dart/pubspec.lock",
    "sdk/dart/lib/**/*",
    "sdk/dart/test/**/*",
    "sdk/go/*",
    "sdk/java/pom.xml",
    "sdk/java/src/**/*",
    "sdk/kotlin/build.gradle.kts",
    "sdk/kotlin/settings.gradle.kts",
    "sdk/kotlin/src/**/*",
    "sdk/rust/Cargo.toml",
    "sdk/rust/src/**/*",
    "sdk/swift/Package.swift",
    "sdk/swift/Sources/**/*",
    "sdk/typescript/package.json",
    "sdk/typescript/package-lock.json",
    "sdk/typescript/tsconfig.json",
    "sdk/typescript/src/**/*",
    "sdk/ue5/**/*",
]

[tool.setuptools.exclude-package-data]
yumi = [
    "**/__pycache__/*",
    "**/*.py[cod]",
    "**/.DS_Store",
    "sdk/**/node_modules/**/*",
    "sdk/**/dist/**/*",
    "sdk/**/build/**/*",
    "sdk/swift/.build/**/*",
    "sdk/swift/.swiftpm/**/*",
    "sdk/java/target/**/*",
    "sdk/csharp/bin/**/*",
    "sdk/csharp/obj/**/*",
    "ui/frontend/node_modules/**/*",
    "ui/frontend/dist/**/*",
]

[project.scripts]
yumi = "yumi.cli:main"

[project.urls]
Homepage = "https://github.com/wenxijiao/yumi-agent"
Repository = "https://github.com/wenxijiao/yumi-agent"
Documentation = "https://github.com/wenxijiao/yumi-agent/tree/main/docs"
Issues = "https://github.com/wenxijiao/yumi-agent/issues"

[project.optional-dependencies]
dev = [
    "build",
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "pyright>=1.1",
    "twine>=6.0",
]
# The web UI now ships pre-built (static assets served by the core server), so
# it needs no extra install or Node. Only local-GPU Qwen TTS stays out of the
# base install. Base `pip install yumi-agent` includes STT, microphone voice
# deps, cloud TTS/STT, and local FastEmbed support; model/embedding weights are
# still downloaded on demand by setup/runtime.
tts-local = ["qwen-tts"]
all = [
    "qwen-tts",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["yumi", "tests"]
exclude = ["_enterprise_seed"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501", "E721", "E402", "E702"]

[tool.ruff.format]
quote-style = "double"

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
# Many optional / generated imports (templates, SDK shims) are not resolvable as a flat tree.
reportMissingImports = "none"
reportMissingTypeStubs = false
# LanceDB and provider wrappers are untyped; keep CI signal on syntax/unbound names without noise.
reportAttributeAccessIssue = "none"
reportArgumentType = "none"
reportGeneralTypeIssues = "none"
reportOptionalMemberAccess = "none"
reportAssignmentType = "none"
reportReturnType = "none"
reportOptionalSubscript = "none"
reportMissingModuleSource = "none"
# yumi/ui is the JS/TS web frontend (built separately with Vite), not Python.
# Edge templates ship multi-language scaffolds; analysis targets the runtime packages only.
exclude = [
    "_enterprise_seed",
    "build",
    "dist",
    "*.egg-info",
    "yumi/ui",
    "yumi/edge/template",
    "**/__pycache__",
    ".venv",
    "venv",
]

# Slightly tighter diagnostics for the most critical subsystems (incremental
# typing). Optional-access bugs are the most common runtime trap here, so we
# re-enable them as warnings without flipping the whole tree to strict.
[[tool.pyright.executionEnvironments]]
root = "yumi/core/features/memory"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[[tool.pyright.executionEnvironments]]
root = "yumi/core/platform/dispatch"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[[tool.pyright.executionEnvironments]]
root = "yumi/core/features/chat"
reportOptionalMemberAccess = "warning"
reportOptionalSubscript = "warning"

[tool.pytest.ini_options]
testpaths = ["tests"]
