[package]
name = "kumi_sdk"
version = "0.1.0"
edition = "2021"
description = "Kumi edge WebSocket client (Rust)"
license = "Apache-2.0"
repository = "https://github.com/wenxijiao/kumi-agent"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
base64 = "0.22"
url = "2"
hostname = "0.4"
fastrand = "2"
